--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@
     <!-- top bar -->
     <div class="top-bar">
         <h1>portfolio</h1>
-        <p><a href="#">Home</a> / Portfolio</p>
+        <p><a href="index.html">Home</a> / Portfolio</p>
     </div>
     <!-- end top bar -->
 
@@ -109,7 +109,8 @@
                     <!-- single work -->
                     <div class="col-md-4 col-sm-6  fashion logo">
                         <a href="single-project.html" class="portfolio_item">
-                            <img src="img/portfolio/01.jpg" alt="image" class="img-responsive" />
+                            <!--<img src="img/portfolio/01.jpg" alt="image" class="img-responsive" />-->
+                            <img src="img/portfolio/smartmockups_amazon.jpg" width="700" alt="image" class="img-responsive" />
                             <div class="portfolio_item_hover">
                                 <div class="portfolio-border clearfix">
                                     <div class="item_info">
