--- a/portfolio.html
+++ b/portfolio.html
@@ -94,11 +94,12 @@
                     <nav class="categories text-center">
                         <ul class="portfolio_filter">
                             <li><a href="" class="active" data-filter="*">All</a></li>
-                            <li><a href="" data-filter=".photography">Photography</a></li>
-                            <li><a href="" data-filter=".logo">Logo</a></li>
-                            <li><a href="" data-filter=".graphics">Graphics</a></li>
-                            <li><a href="" data-filter=".ads">Advertising</a></li>
-                            <li><a href="" data-filter=".fashion">Fashion</a></li>
+                            <li><a href="" data-filter=".html">HTML/CSS</a></li>
+                            <li><a href="" data-filter=".javascript">Javascript</a></li>
+                            <li><a href="" data-filter=".reactjs">ReactJS</a></li>
+        
+                            <!--<li><a href="" data-filter=".ads">Advertising</a></li>-->
+                            
                         </ul>
                     </nav>
                 </div>
@@ -107,15 +108,15 @@
                 <!-- portfolio_container -->
                 <div class="no-padding portfolio_container clearfix">
                     <!-- single work -->
-                    <div class="col-md-4 col-sm-6  fashion logo">
+                    <div class="col-md-4 col-sm-6  reactjs">
                         <a href="single-project.html" class="portfolio_item">
                             <!--<img src="img/portfolio/01.jpg" alt="image" class="img-responsive" />-->
                             <img src="img/portfolio/smartmockups_amazon.jpg" width="700" alt="image" class="img-responsive" />
                             <div class="portfolio_item_hover">
                                 <div class="portfolio-border clearfix">
                                     <div class="item_info">
-                                        <span>Mockups in seconds</span>
-                                        <em>Fashion / Logo</em>
+                                        <span>Amazon Clone</span>
+                                        <em>ReactJS</em>
                                     </div>
                                 </div>
                             </div>
@@ -124,14 +125,14 @@
                     <!-- end single work -->
 
                     <!-- single work -->
-                    <div class="col-md-4 col-sm-6 ads graphics">
+                    <div class="col-md-4 col-sm-6 reactjs">
                         <a href="single-project.html" class="portfolio_item">
-                            <img src="img/portfolio/03.jpg" alt="image" class="img-responsive" />
+                            <img src="img/portfolio/smartmockups_kj7sopin.jpg" alt="image" class="img-responsive" />
                             <div class="portfolio_item_hover">
                                 <div class="portfolio-border clearfix">
                                     <div class="item_info">
-                                        <span>Floating mockups</span>
-                                        <em>Ads / Graphics</em>
+                                        <span>Forecast</span>
+                                        <em>ReactJS</em>
                                     </div>
                                 </div>
                             </div>
@@ -140,14 +141,14 @@
                     <!-- end single work -->
 
                     <!-- single work -->
-                    <div class="col-md-4 col-sm-12 photography">
+                    <div class="col-md-4 col-sm-12 javascript">
                         <a href="single-project.html" class="portfolio_item">
-                            <img src="img/portfolio/02.jpg" alt="image" class="img-responsive" />
+                            <img src="img/portfolio/screenshot-estherboateng.co.uk-2020.12.28-00_11_53.png" alt="image" class="img-responsive" />
                             <div class="portfolio_item_hover">
                                 <div class="portfolio-border clearfix">
                                     <div class="item_info">
-                                        <span>Photorealistic smartwatch</span>
-                                        <em>Photography</em>
+                                        <span>Forecast</span>
+                                        <em>Javascript</em>
                                     </div>
                                 </div>
                             </div>
@@ -156,14 +157,14 @@
                     <!-- end single work -->
 
                     <!-- single work -->
-                    <div class="col-md-4 col-sm-6 fashion ads">
+                    <div class="col-md-4 col-sm-6 html">
                         <a href="single-project.html" class="portfolio_item">
-                            <img src="img/portfolio/04.jpg" alt="image" class="img-responsive" />
+                            <img src="img/portfolio/cake-example.png" alt="image" class="img-responsive" />
                             <div class="portfolio_item_hover">
                                 <div class="portfolio-border clearfix">
                                     <div class="item_info">
-                                        <span>Held by hands</span>
-                                        <em>Fashion / Ads</em>
+                                        <span>Cake Example</span>
+                                        <em>HTML/CSS</em>
                                     </div>
                                 </div>
                             </div>
@@ -172,14 +173,14 @@
                     <!-- end single work -->
 
                     <!-- single work -->
-                    <div class="col-md-4 col-sm-6 graphics ads">
+                    <div class="col-md-4 col-sm-6 html javascript">
                         <a href="single-project.html" class="portfolio_item">
-                            <img src="img/portfolio/05.jpg" alt="image" class="img-responsive" />
+                            <img src="img/portfolio/Social-Marketer.png" alt="image" class="img-responsive" />
                             <div class="portfolio_item_hover">
                                 <div class="portfolio-border clearfix">
                                     <div class="item_info">
-                                        <span>Mobile devices</span>
-                                        <em>Graphics / Ads</em>
+                                        <span>Social Marketer</span>
+                                        <em>HTML/CSS & Javascript</em>
                                     </div>
                                 </div>
                             </div>
@@ -188,7 +189,7 @@
                     <!-- end single work -->
 
                     <!-- single work -->
-                    <div class="col-md-4 col-sm-12 photography">
+                    <!--<div class="col-md-4 col-sm-12 photography">
                         <a href="single-project.html" class="portfolio_item">
                             <img src="img/portfolio/010.jpg" alt="image" class="img-responsive" />
                             <div class="portfolio_item_hover">
@@ -204,7 +205,7 @@
                     <!-- end single work -->
 
                     <!-- single work -->
-                    <div class="col-md-4 col-sm-6 graphics ads">
+                    <!--<div class="col-md-4 col-sm-6 graphics ads">
                         <a href="single-project.html" class="portfolio_item">
                             <img src="img/portfolio/06.jpg" alt="image" class="img-responsive" />
                             <div class="portfolio_item_hover">
@@ -220,7 +221,7 @@
                     <!-- end single work -->
 
                     <!-- single work -->
-                    <div class="col-md-4 col-sm-6 graphics ads">
+                    <!--<div class="col-md-4 col-sm-6 graphics ads">
                         <a href="single-project.html" class="portfolio_item">
                             <img src="img/portfolio/07.jpg" alt="image" class="img-responsive" />
                             <div class="portfolio_item_hover">
@@ -236,7 +237,7 @@
                     <!-- end single work -->
 
                     <!-- single work -->
-                    <div class="col-md-4 col-sm-6 graphics ads">
+                    <!--<div class="col-md-4 col-sm-6 graphics ads">
                         <a href="single-project.html" class="portfolio_item">
                             <img src="img/portfolio/08.jpg" alt="image" class="img-responsive" />
                             <div class="portfolio_item_hover">
