--- a/projects/amazonclone.html
+++ b/projects/amazonclone.html
@@ -14,7 +14,7 @@
     <link href="ionicons/css/ionicons.min.css" rel="stylesheet">
 
     <!-- main css -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
 
 
     <!-- modernizr -->
@@ -62,7 +62,7 @@
 
                 <li><a href="index.html">Home</a></li>
                 <li><a href="portfolio.html">portfolio</a></li>
-                <li><a href="services.html">blog</a></li>
+                <li><a href="blog.html">blog</a></li>
                 <li><a href="about.html">About me</a></li>
                 <li><a href="contact.html">contact me</a></li>
 
@@ -81,8 +81,8 @@
     
     <!-- top-bar -->
     <div class="top-bar">
-        <h1>project title</h1>
-        <p><a href="#">Home</a> / <a href="#">portfolio</a> / project title</p>
+        <h1>Amazon Clone</h1>
+        <p><a href="../index.html">Home</a> / <a href="../portfolio.html">portfolio</a> / Amazon Clone</p>
     </div>
     <!-- end top-bar -->
     
