--- a/portfolio.html
+++ b/portfolio.html
@@ -109,9 +109,9 @@
                 <div class="no-padding portfolio_container clearfix">
                     <!-- single work -->
                     <div class="col-md-4 col-sm-6  reactjs">
-                        <a href="single-project.html" class="portfolio_item">
-                            <!--<img src="img/portfolio/01.jpg" alt="image" class="img-responsive" />-->
-                            <img src="img/portfolio/smartmockups_amazon.jpg" width="700" alt="image" class="img-responsive" />
+                        <!--<a href="single-project.html" class="portfolio_item">-->
+                            <a href="projects/amazonclone.html" class="portfolio_item">
+                            <img src="img/portfolio/smartmockups_amazon.jpg" alt="image" class="img-responsive" />
                             <div class="portfolio_item_hover">
                                 <div class="portfolio-border clearfix">
                                     <div class="item_info">
