--- a/blog.html
+++ b/blog.html
@@ -108,6 +108,8 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat pariatur architecto recusandae
                     doloribus provident, veniam nobis </p>
 
+                    <a href="../box/blogs/beginning.html">Hello</a>
+
             </div>
 
 
