--- a/portfolio.html
+++ b/portfolio.html
@@ -110,7 +110,7 @@
                     <!-- single work -->
                     <div class="col-md-4 col-sm-6  reactjs">
                         <!--<a href="single-project.html" class="portfolio_item">-->
-                            <a href="projects/amazonclone.html" class="portfolio_item">
+                            <a href="./amazonclone.html" class="portfolio_item">
                             <img src="img/portfolio/smartmockups_amazon.jpg" alt="image" class="img-responsive" />
                             <div class="portfolio_item_hover">
                                 <div class="portfolio-border clearfix">
