--- a/portfolio.html
+++ b/portfolio.html
@@ -126,7 +126,7 @@
 
                     <!-- single work -->
                     <div class="col-md-4 col-sm-6 reactjs">
-                        <a href="single-project.html" class="portfolio_item">
+                        <a href="weatherreact.html" class="portfolio_item">
                             <img src="img/portfolio/smartmockups_kj7sopin.jpg" alt="image" class="img-responsive" />
                             <div class="portfolio_item_hover">
                                 <div class="portfolio-border clearfix">
@@ -142,7 +142,7 @@
 
                     <!-- single work -->
                     <div class="col-md-4 col-sm-12 javascript">
-                        <a href="single-project.html" class="portfolio_item">
+                        <a href="jsweather.html" class="portfolio_item">
                             <img src="img/portfolio/screenshot-estherboateng.co.uk-2020.12.28-00_11_53.png" alt="image" class="img-responsive" />
                             <div class="portfolio_item_hover">
                                 <div class="portfolio-border clearfix">
