--- a/portfolio.html
+++ b/portfolio.html
@@ -141,7 +141,7 @@
                     <!-- end single work -->
 
                     <!-- single work -->
-                    <div class="col-md-4 col-sm-12 javascript">
+                    <div class="col-md-4 col-sm-12 javascript html">
                         <a href="jsweather.html" class="portfolio_item">
                             <img src="img/portfolio/screenshot-estherboateng.co.uk-2020.12.28-00_11_53.png" alt="image" class="img-responsive" />
                             <div class="portfolio_item_hover">
@@ -157,14 +157,14 @@
                     <!-- end single work -->
 
                     <!-- single work -->
-                    <div class="col-md-4 col-sm-6 html">
-                        <a href="single-project.html" class="portfolio_item">
+                    <div class="col-md-4 col-sm-6 html javascript">
+                        <a href="cake.html" class="portfolio_item">
                             <img src="img/portfolio/cake-example.png" alt="image" class="img-responsive" />
                             <div class="portfolio_item_hover">
                                 <div class="portfolio-border clearfix">
                                     <div class="item_info">
                                         <span>Cake Example</span>
-                                        <em>HTML/CSS</em>
+                                        <em>HTML/CSS & Javascript</em>
                                     </div>
                                 </div>
                             </div>
