--- a/portfolio.html
+++ b/portfolio.html
@@ -173,8 +173,8 @@
                     <!-- end single work -->
 
                     <!-- single work -->
-                    <div class="col-md-4 col-sm-6 html javascript">
-                        <a href="single-project.html" class="portfolio_item">
+                    <div class="col-md-4 col-sm-6 html html">
+                        <a href="marketer.html" class="portfolio_item">
                             <img src="img/portfolio/Social-Marketer.png" alt="image" class="img-responsive" />
                             <div class="portfolio_item_hover">
                                 <div class="portfolio-border clearfix">
