--- a/blog.html
+++ b/blog.html
@@ -125,7 +125,7 @@
                     lot has happened since launching which for me is pretty strange but exciting at the same time. When
                     launching my website... </p>
 
-                <a href="../box/blogs/beginning.html">Read More</a>
+                <a href="celebrate.html">Read More</a>
 
             </div>
 
@@ -143,8 +143,7 @@
                     next step. So I created my website from scratch enabling me to showcase my projects which would be
                     good for future employers... </p>
 
-                <a href="../box/blogs/beginning.html">Read More</a>
-
+                <a href="brand.html">Read More</a>
             </div>
 
 
@@ -159,7 +158,7 @@
                     literally working my butt off! </p>
 
 
-                    <a href="../box/blogs/beginning.html">Read More</a>
+                    <a href="update.html">Read More</a>
 
             </div>
 
@@ -176,7 +175,7 @@
                     having on my mind recently is when is the best time to start applying for a new job? When is the
                     right time?</p>
 
-                    <a href="../box/blogs/beginning.html">Read More</a>
+                    <a href="righttime.html">Read More</a>
 
             </div>
 
@@ -204,7 +203,7 @@
                     I had a week off a few weeks back and though I wanted to catch up on a few things, I was just
                     physically exhausted, having been working throughout lockdown.</p>
 
-                    <a href="../box/blogs/beginning.html">Read More</a>
+                    <a href="progress.html">Read More</a>
 
             </div>
 
@@ -217,7 +216,7 @@
                 <p>I wanted my next blog post to be about what I’ve learnt so far since starting this journey but now
                     this post will be completely different.</p>
 
-                    <a href="../box/blogs/beginning.html">Read More</a>
+                    <a href="starterkit.html">Read More</a>
 
             </div>
 
@@ -231,7 +230,7 @@
 
                     Thank you for taking the time out to read my blog. I'm very new to this whole blogging stuff, so bare with me. Still working on improving this but I'm sure it'll become an awesome real soon.</p>
                    
-                    <a href="../box/blogs/beginning.html">Read More</a>
+                    <a href="beginning.html">Read More</a>
             </div>
 
 
