--- a/blog.html
+++ b/blog.html
@@ -100,19 +100,12 @@
 
             <div class="box">
 
-                <img src="https://www.thesprucepets.com/thmb/aB6Dj_ZD9iulkqn7wzFynzFuz5Q=/960x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/horse-galloping-in-grass-688899769-587673275f9b584db3a44cdf.jpg"
-                    alt="">
-                <h2>Lorem Panna</h2><br>
+                <img src="/img/blog/james-healy-WZ-YnvCCLug-unsplash.jpg"
+                    alt="" width="100">
+                <h2>End of the Year - 2020</h2><br>
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat pariatur architecto recusandae
-                    doloribus provident, veniam nobis aliquid velit eveniet animi delectus cupiditate sed officia iusto
-                    eius maiores praesentium ut possimus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab
-                    ipsum ipsam quidem magni. Error aliquam quod animi illo neque inventore magni, quisquam consequuntur
-                    consequatur alias itaque voluptate nulla. Ex, quia. Lorem ipsum dolor sit amet consectetur
-                    adipisicing elit. Voluptas beatae iusto eos laboriosam corporis alias dolore! Fuga architecto
-                    pariatur ipsa voluptate neque quod nulla placeat corrupti, dolorem necessitatibus similique
-                    repudiandae!</p>
-
+                <p> It has definitely been a year for me, for most of us in fact.</p>
+                <a href="endofyear.html">Read More</a>
             </div>
 
 
