--- a/jsweather.html
+++ b/jsweather.html
@@ -72,7 +72,7 @@
 
                 <li class="box-social"><a href="https://twitter.com/MissEsther_x" target="_blank"><i
                             class="fab fa-twitter"></i></a></li>
-                <li class="box-social"><a href="https://www.instagram.com/missesther_x/" target="_blank"><i
+                <li class="box-social"><a href="https://www.instagram.com/_esscodes" target="_blank"><i
                             class="fab fa-instagram"></i></a></li>
                 <li class="box-social"><a href="https://github.com/Ess91" target="_blank"> <i
                             class="fab fa-github"></i></a></li>
@@ -116,7 +116,7 @@
             <div class="project-links">
                 <a href="https://github.com/Ess91/My-Vanilla-Weather-App.git" target="_blank">
                     <h5>View GitHub</h5>
-                </a> &nbsp<a href="https://esscodes-vanilla-weather.netlify.app" target="_blank">
+                </a> &nbsp<a href="https://esscodes-js-weather.netlify.app" target="_blank">
                     <h5>View Site</h5>
                 </a>
             </div>
