--- a/brand.html
+++ b/brand.html
@@ -71,7 +71,7 @@
                 <li class="box-label">Follow me</li>
 
                 <li class="box-social"><a href="https://twitter.com/MissEsther_x" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                <li class="box-social"><a href="https://www.instagram.com/missesther_x/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                <li class="box-social"><a href="https://www.instagram.com/_esscodes" target="_blank"><i class="fab fa-instagram"></i></a></li>
                 <li class="box-social"><a href="https://github.com/Ess91" target="_blank"> <i class="fab fa-github"></i></a></li>
                 <li class="box-social"><a href="https://www.linkedin.com/in/esther-agyare-boateng-004a3453" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
             </ul>
@@ -132,22 +132,7 @@
             
         </div>
 
-        <!--<div class="col-md-3">
-            <ul class="cat-ul">
-                <li><i class="ion-ios-circle-filled"></i> Design</li>
-                <li><i class="ion-ios-circle-filled"></i> consectetur adipiscing</li>
-                <li><i class="ion-ios-circle-filled"></i> et gubernationis</li>
-                <li><i class="ion-ios-circle-filled"></i> Aliter enim nosmet</li>
-            </ul>
-            <div class="h-10"></div>
-            <h4>Share</h4>
-            <ul class="social-ul">
-                <li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-instagram-outline"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-twitter"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-dribbble"></i></a></li>
-            </ul>
-        </div>-->
+       
     </div>
     <!-- end main-container -->
 
