--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
 
                 <li class="box-label">Follow me</li>
                 <li class="box-social"><a href="https://twitter.com/MissEsther_x" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                <li class="box-social"><a href="https://www.instagram.com/missesther_x/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                <li class="box-social"><a href="https://www.instagram.com/_esscodes" target="_blank"><i class="fab fa-instagram"></i></a></li>
                 <li class="box-social"><a href="https://github.com/Ess91" target="_blank"> <i class="fab fa-github"></i></a></li>
                 <li class="box-social"><a href="https://www.linkedin.com/in/esther-agyare-boateng-004a3453" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
             </ul>
