--- a/contact.html
+++ b/contact.html
@@ -131,7 +131,7 @@
             <div class="h-30"></div>
             <p>If you have a project you would like to discuss, please get in touch... </p>
             <div class="contact-info">
-                <p><i class="fas fa-phone"></i> 0100 787 3456</p>
+                <!--<p><i class="fas fa-phone"></i> 0100 787 3456</p>-->
                 <p><i class="far fa-envelope"></i> info@estherboateng.co.uk</p>
             </div>
         </div>
