--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
     <!-- Top bar -->
     <div class="top-bar">
         <h1>About Me</h1>
-        <p><a href="#">Home</a> / About me</p>
+        <p><a href="index.html">Home</a> / About me</p>
     </div>
     <!-- end Top bar -->
 
@@ -106,15 +106,7 @@
                     <strong>Current Focus: </strong>JavaScript & ReactJS
                 </p>
 
-            <!--<p>Tum ille: Tu autem cum ipse tantum librorum habeas, quos hic tandem requiris? Esse enim quam vellet
-                iniquus iustus poterat inpune. </p>-->
-            <div class="h-10"></div>
-           <!--- <ul class="social-ul">
-                <li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="fab fa-instagram"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-twitter"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-dribbble"></i></a></li>
-            </ul>-->
+          
 
 
         </div>
