--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <b>tech.</b>
                     </span>
 		        </h1>
-                <h5>taking you on my journey</h5>
+                <!--<h5>taking you on my journey</h5>-->
             </div>
 
             <div class="mouse">
