--- a/amazonclone.html
+++ b/amazonclone.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Esther Boateng</title>
+    <title>Esther Boateng - Amazon Clone</title>
     <link rel="icon" href="img/favicon.png" type="image/x-icon">
 
     <!-- Bootstrap -->
