--- a/portfolio.html
+++ b/portfolio.html
@@ -173,7 +173,7 @@
                     <!-- end single work -->
 
                     <!-- single work -->
-                    <div class="col-md-4 col-sm-6 html html">
+                    <!--<div class="col-md-4 col-sm-6 html html">
                         <a href="marketer.html" class="portfolio_item">
                             <img src="img/portfolio/Social-Marketer.png" alt="image" class="img-responsive" />
                             <div class="portfolio_item_hover">
@@ -185,7 +185,7 @@
                                 </div>
                             </div>
                         </a>
-                    </div>
+                    </div>-->
                     <!-- end single work -->
 
                     <!-- single work -->
