--- a/endofyear.html
+++ b/endofyear.html
@@ -93,7 +93,7 @@
     <!-- main-container -->
     <div class="container main-container">
         <div class="col-md-12">
-            <img src="img/blog/james-healy-WZ-YnvCCLug-unsplash.jpg" alt="" class="img-responsive" />
+            <img src="img/blog/james-healy-WZ-YnvCCLug-unsplash.jpg" alt="" width="700" class="img-responsive" style="display: block; margin: 0 auto;"/>
             <div class="h-30"></div>
         </div>
 
@@ -115,8 +115,8 @@
 
                 <p>
                     For the last 5 months or so, it has definitely been good to me despite everything. I can finally say
-                    that I’m a Junior Front-End Developer which is pretty amazing before I was completely lost, didn’t
-                    know exactly what I wanted to do even beginning of this year, I didn’t know what kind of developer I
+                    that I am a Junior Front-End Developer which is pretty amazing because before I was completely lost, didn’t
+                    know exactly what I wanted to do, I didn’t know what kind of developer I
                     wanted to be. Was it Back-End? Was it Front-End? Was it Full-Stack? Literally, I had no idea but I
                     managed to figure it out in the end.
 
@@ -128,8 +128,8 @@
 
                 <ol>
                     <li>Launched my website -
-                        <p>Proudest moment ever. I coded this whole desktop and mobile website from scratch. It showed
-                            me that I was actually capable of creating this website by myself. Although, I’m not a web
+                        <p>Proudest moment ever. I coded the whole desktop and mobile website from scratch. It showed
+                            me that I was actually capable of creating websites. Although, I’m not a web
                             designer, it still came together!
                         </p>
                     </li>
@@ -144,14 +144,14 @@
                             I agreed to do it in the end because I really wanted to step out of my comfort zone, I
                             really wanted to put myself out there and I always had my motto, “Do It Afraid”. I did it,
                             although I was extremely nervous and rambled a lot and rushed it, I really did it!
-                        </p><br>
+                        </p>
                     </li>
 
                     <li>
                         Mentoring -
                         <p>
                             It was through being a guest speaker that someone had approached me for mentoring. Again, I
-                            had this thought, why me? What could I possibly mentor them on? Again, “Do It Afraid”.<br>
+                            had this thought, why me? What could I possibly mentor them on? <br>
                             Every developer that I know and that I follow on different social media platforms actually
                             do not know everything. So even if I do not have years of experience, I can easily share
                             what I already know plus learn some more from questions I may be asked.<br>
@@ -168,12 +168,10 @@
                     comfort zone!
                 </p>
 
-                <p>You guys will be reading this post from my new webiste. I wanted to change up my website because I
-                    wanted to improve the way the old website looked, add a little colour. Hope you guys enjoy it as
-                    much as I enjoyed building it!</p>
 
-                    <p>Ending this year on a high!</p>
-                    <p>Happy New Year 😊</p>
+                    <p>Ending 2020 on a high!</p>
+
+                    <p>Happy New Year guys! 😊</p>
 
             </section>
 
