--- a/movieapp.html
+++ b/movieapp.html
@@ -85,7 +85,7 @@
 
     <!-- top-bar -->
     <div class="top-bar">
-        <h1>project title</h1>
+        <h1>Movie App</h1>
         <p><a href="index.html">Home</a> / <a href="portfolio.html">portfolio</a> / Movie App</p>
     </div>
     <!-- end top-bar -->
