--- a/portfolio.html
+++ b/portfolio.html
@@ -159,7 +159,7 @@
                     <!-- single work -->
                     <div class="col-md-4 col-sm-6 html javascript">
                         <a href="cake.html" class="portfolio_item">
-                            <img src="img/portfolio/cake-example.png" alt="image" class="img-responsive" />
+                            <img src="img/portfolio/cake-example portfolio.png" alt="image" class="img-responsive" />
                             <div class="portfolio_item_hover">
                                 <div class="portfolio-border clearfix">
                                     <div class="item_info">
@@ -173,19 +173,19 @@
                     <!-- end single work -->
 
                     <!-- single work -->
-                    <!--<div class="col-md-4 col-sm-6 html html">
-                        <a href="marketer.html" class="portfolio_item">
-                            <img src="img/portfolio/Social-Marketer.png" alt="image" class="img-responsive" />
+                    <div class="col-md-4 col-sm-6 html javascript">
+                        <a href="movieapp.html" class="portfolio_item">
+                            <img src="img/portfolio/movieapp.png" alt="image" class="img-responsive" />
                             <div class="portfolio_item_hover">
                                 <div class="portfolio-border clearfix">
                                     <div class="item_info">
-                                        <span>Social Marketer</span>
+                                        <span>Movie App</span>
                                         <em>HTML/CSS & Javascript</em>
                                     </div>
                                 </div>
                             </div>
                         </a>
-                    </div>-->
+                    </div>
                     <!-- end single work -->
 
                     <!-- single work -->
