--- a/righttime.html
+++ b/righttime.html
@@ -82,7 +82,7 @@
     <!-- top-bar -->
     <div class="top-bar">
         <h1>Right Time?</h1>
-        <p><a href="index.html">Home</a> / <a href="blog.html">blog</a> / right time</p>
+        <p><a href="index.html">Home</a> / <a href="blog.html">blog</a> / Right time</p>
     </div>
     <!-- end top-bar -->
     
