--- a/balance.html
+++ b/balance.html
@@ -123,9 +123,8 @@
                 </p>
 
                 <p>
-                    Now that schools are closed, the hours used in learning before have been cut down considerably and
-                    the only time I get to do any work is when my child is asleep, so probably about 2/3hours a day.
-
+                    Now that schools are closed, the hours used in learning has been cut down considerably and
+                    the only time I get to do any work is when my child is asleep, so probably between 2 and 4 hours a day.
                 </p>
 
                 <h4>How do I find the Right Balance? </h4>
@@ -135,21 +134,22 @@
                     what I’d like to achieve in the new week. I reflect on what worked well for me the previous week,
                     what I was unable to complete and what I can do better. I also like to do this every month, do a
                     reflection on the last day of every month. What goals I achieved in the month? What goals would I
-                    like to achieve next month?
+                    like to achieve the next month?
                 </p>
 
                 <p>Sometimes I have the same goals but I would change it up a bit, maybe the process in which to
                     accomplish that specific goal is not working and I have to switch the process up a bit in order for
                     the goal to be achieved. So I am a planner, which is good! I can put my ideas, my processes and
-                    goals for the week/month onto paper. However, I still feel like there’s not enough hours in the day
-                    so I’m learning to spread it over the week.
+                    goals for the week and month onto paper. However, I still feel like there’s not enough hours in the day
+                    so I’m learning to spread it.
                 </p>
 
                 <p>Now that I am able to plan what I need to do for the week, it helps me to know that I am able to do
                     other things during the day especially with homeschooling and spending time with my kid. <br>
                     Planning is so important because you know exactly what needs to be done which then helps you to find
-                    the right balance in being a mother, being a coder and then being me! <br><br>
-                    Hope you guys have a good week,<br>
+                    the right balance for me in being a mother, being a coder and then just being me! <br><br>
+
+            
                     Esther 😊
 
 
