--- a/ecommerce.html
+++ b/ecommerce.html
@@ -85,7 +85,7 @@
 
     <!-- top-bar -->
     <div class="top-bar">
-        <h1>Movie App</h1>
+        <h1>E-Commerce Web App</h1>
         <p><a href="index.html">Home</a> / <a href="portfolio.html">portfolio</a> / E-Commerce</p>
     </div>
     <!-- end top-bar -->
@@ -93,7 +93,7 @@
     <!-- main-container -->
     <div class="container main-container">
         <div class="col-md-12">
-            <img src="img/portfolio/movieapp.png" alt="Movie App" class="img-responsive" />
+            <img src="img/portfolio/ecommerce.png" alt="E-Commerce Web App" class="img-responsive" />
             <div class="h-30"></div>
         </div>
 
