--- a/portfolio.html
+++ b/portfolio.html
@@ -107,6 +107,42 @@
 
                 <!-- portfolio_container -->
                 <div class="no-padding portfolio_container clearfix">
+
+ <!-- single work -->
+ <div class="col-md-4 col-sm-6  reactjs">
+    <!--<a href="single-project.html" class="portfolio_item">-->
+        <a href="./ecommerce.html" class="portfolio_item">
+        <img src="img/portfolio/ecommerce.png" alt="image" class="img-responsive" />
+        <div class="portfolio_item_hover">
+            <div class="portfolio-border clearfix">
+                <div class="item_info">
+                    <span>E-Commerce Web App</span>
+                    <em>ReactJS</em>
+                </div>
+            </div>
+        </div>
+    </a>
+</div>
+<!-- end single work -->
+
+ <!-- single work -->
+ <div class="col-md-4 col-sm-6   javascript html">
+    <!--<a href="single-project.html" class="portfolio_item">-->
+        <a href="./conquer-clone.html" class="portfolio_item">
+        <img src="img/portfolio/conquer-clone.png" alt="image" class="img-responsive" />
+        <div class="portfolio_item_hover">
+            <div class="portfolio-border clearfix">
+                <div class="item_info">
+                    <span>Conquer Clone</span>
+                    <em>HTML & CSS/Javascript</em>
+                </div>
+            </div>
+        </div>
+    </a>
+</div>
+<!-- end single work -->
+
+
                     <!-- single work -->
                     <div class="col-md-4 col-sm-6  reactjs">
                         <!--<a href="single-project.html" class="portfolio_item">-->
