--- a/services.html
+++ b/services.html
@@ -120,7 +120,7 @@
         </div>
 
         <div class="col-md-9">
-            <h5>Client Support</h5>
+            <h5>Client Support/Web Maintenance</h5>
             <p style="width: 55em;">We know how important it is to continuously maintain your website and so we provide
                 a service in ensuring that your website is maintained and is up-to-date with the latest technologies.
                 Customer Service is 100% paramount to us and we want to make sure that your requirements for your custom
