--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Esther Boateng - Finding The Right Balance</title>
+    <title>Esther Boateng - Services</title>
     <link rel="icon" href="img/favicon.png" type="image/x-icon">
 
     <!-- Bootstrap -->
@@ -93,17 +93,7 @@
 
     <!-- main-container -->
     <div class="container main-container">
-        <!--<div class="col-md-12">
-            <img src="img/blog/anete-lusina-2JknzBYDu6k-unsplash.jpg" alt="Planner" class="img-responsive" width="900"
-                style="margin: 0 auto; display: block;" />
-            <div class="h-30"></div>
-        </div>-->
 
-        <!--<div class="col-md-12">
-            <h3 class="text-uppercase">Finding The Right Balance</h3>
-            <h5><em> 2nd February 2021</em></h5>
-            <div class="h-30"></div>
-        </div>-->
 
 
         <div class="col-md-10">
@@ -120,7 +110,7 @@
                     use. We work tirelessly in providing you with a stunning website that exceeds all expectations. We
                     pride
                     ourselves in making sure the client’s are happy!</p>
-                    <br>
+                <br>
 
                 <h5>Client Support/Web Maintenance &nbsp; <i class="fas fa-headset"
                         style="color: #ffbf00; font-size: 25px;"></i></h5>
@@ -130,8 +120,13 @@
                     Customer Service is 100% paramount to us and we want to make sure that your requirements for your
                     custom
                     website is met.</p>
+                <br>
 
+                <p style="text-align: center;">
+                        Get in touch:<br>
+                        Through our <a href="./contact.html">contact page</a> or by <a href="mailto:info@estherboateng.co.uk">email</a> 
 
+                </p>
 
 
 
