--- a/services.html
+++ b/services.html
@@ -101,10 +101,10 @@
 
             <section>
                 <h5> Web Development &nbsp; <i class="fas fa-code" style="color: #ffbf00; font-size: 25px;"></i></h5>
-                <p>Whether it is a website for your small business, an e-commerce website or simply
+                <p>Whether it's a website for your small business, an e-commerce website or simply
                     something unique we’ve
                     got you covered. Providing you with front-end and back-end solutions with modern-day web development
-                    features these include up-to-data guidelines, search friendliness for search accessibility. We build
+                    features these include up-to-data guidelines and search friendliness for search accessibility. We build
                     responsive websites that will allow your audience to view your websites regardless of what devices
                     they
                     use. We work tirelessly in providing you with a stunning website that exceeds all expectations. We
