--- a/chingu.html
+++ b/chingu.html
@@ -86,7 +86,7 @@
 
     <!-- top-bar -->
     <div class="top-bar">
-        <h1>Chingu Experience (6 Weeks Journey) - Part 1</h1>
+        <h1>Chingu Experience - Part 1</h1>
         <p><a href="index.html">Home</a> / <a href="blog.html">blog</a> / Chingu - Part 1</p>
     </div>
     <!-- end top-bar -->
@@ -132,7 +132,9 @@
                 entail and made me feel I could reach out to them even though they were dealing with other groups.</p>
 
                 This is the end of the first week with 5 weeks left to go…
+                <br><br>
 
+                <p>
                 So we had our first meeting which was pretty daunting even though it was a voice call, my first thought
                 was, “How am I going to do this?” but proceeded anyway. It was awkward for me because normally I’m a
                 very quiet and reserved person and I don’t talk much and so was feeling very nervous. My teammates
@@ -147,9 +149,10 @@
                 The front-end was making the application look attractive and the back-end was retrieving the user data
                 and placing it in the new application. When I first applied for the Chingu, I initially wanted to
                 improve my front-end development skills but when we discussed the project because I had experiences with
-                API (Application Programming Interface), I ended up doing the back-end of the application.
+                API (Application Programming Interface), I ended up doing the back-end of the application.</p>
+                <br>
 
-
+<p>To be continued....</p>
 
             </section>
 
