--- a/chingu.html
+++ b/chingu.html
@@ -94,7 +94,7 @@
     <!-- main-container -->
     <div class="container main-container">
         <div class="col-md-12">
-            <img src="img/blog/kevin-bhagat-zNRITe8NPqY-unsplash.jpg" alt="" class="img-responsive" />
+            <img src="img/blog/florian-olivo-4hbJ-eymZ1o-unsplash.jpg" alt="Codes" class="img-responsive" width="800" style="display: block; margin: 0 auto;"/>
             <div class="h-30"></div>
         </div>
 
