--- a/blog.html
+++ b/blog.html
@@ -99,6 +99,16 @@
 
             <div class="box">
 
+                <img src="/img/blog/florian-olivo-4hbJ-eymZ1o-unsplash.jpg" alt="Planner">
+                <h2>Chingu Experience (6 Weeks Journey) - Part 1</h2><br>
+
+                    <p>The first few days were overwhelming because it’s where exactly do you start? They do have handbooks for
+                        us to read but even reading it was a little overwhelming only because it was my first team project ever.... </p>
+                    <a href="chingu.html">Read More</a>
+            </div>
+
+            <div class="box">
+
                 <img src="/img/blog/anete-lusina-2JknzBYDu6k-unsplash.jpg" alt="Planner">
                 <h2>Finding the Right Balance</h2><br>
 
