--- a/chingupart2.html
+++ b/chingupart2.html
@@ -141,8 +141,45 @@
                     what we achieved, a very simple web application:
                 </p>
                 <br>
-                <img src="img/blog/Screenshot 2021-03-17 18.31.49.png" width="800" style="display: block; margin: 0 auto;"><br>
-                <img src="img/blog/screenshot-45.79.148.207_8888-2021.03.17-18_32_09.png" width="800" style="display: block; margin: 0 auto;">
+                <img src="img/blog/Screenshot 2021-03-17 18.31.49.png" width="800"
+                    style="display: block; margin: 0 auto;"><br>
+                <img src="img/blog/screenshot-45.79.148.207_8888-2021.03.17-18_32_09.png" width="800"
+                    style="display: block; margin: 0 auto;">
+                <br>
+                <p>(Please don’t ask me about the first track lol! My son listens to it 24/7 🙄)</p>
+
+                <p>
+                    Next, I had to change the redirect uri, this is when a user successfully authorizes an application,
+                    the authorization server will redirect the user back to the application. When I was building the
+                    backend of things I was using a localhost server which was my local machine/computer the program was
+                    running on. As it’s on a localhost, it wouldn’t work for other users to use the application and so I
+                    had to change this and in order for this to happen we had to host the application. We suggested a
+                    few free hosting sites, Linode, Netlify and Vercel. Originally, we wanted to use Netflify as it was
+                    free and from past experiences I’ve had no problems with it. However, after a lot of debugging and
+                    google searches we realised NodeJS may not be straightforward with Netflify, so we opted for Linode
+                    which is a cloud server and worked really well with ease. Once it was deployed, we changed the
+                    redirect uri and the project was officially completed.
+                </p>
+
+                <p>
+                    Chingu was really good for me because I got to work on a project with a team. We worked in an agile
+                    environment which a lot of companies are asking for potential candidates to have experience in.
+                    Although it was a nerve-wracking feeling from the start, I really worked with an incredible team
+                    from different countries and was able to adjust with different time zones.
+                </p>
+
+                <p>
+                    This overall experience was amazing, it pushed me to work above what I defined myself as a
+                    developer. Originally, I wanted to just work as a front-end developer but after these last 6 weeks
+                    and the capabilities I’ve shown throughout, it shows that maybe I should work towards being a full
+                    stack developer (front-end and back-end).
+<br><br>
+                    Esther 😊
+
+                </p>
+
+
+
             </section>
 
         </div>
