--- a/blog.html
+++ b/blog.html
@@ -99,12 +99,37 @@
 
             <div class="box">
 
-                <img src="/img/blog/florian-olivo-4hbJ-eymZ1o-unsplash.jpg" alt="Planner">
+                <blockquote>
+                    &ldquo;Teamwork begins by building trust. And the only way to do that is to overcome our need for
+                    invulnerability&rdquo;
+                    <figcaption><em>Patrick Lencioni</em></figcaption>
+                </blockquote>
+
+            </div>
+
+            <div class="box">
+
+                <img src="/img/blog/pontus-wellgraf-FU9bFwNTVJ8-unsplash.jpg" alt="Couple Laptops">
+                <h2>Chingu Experience (6 Weeks Journey) - Part 2</h2><br>
+
+                <p>Initially our idea was to do a movie streaming web application, so my first task was to research
+                    which movie streaming services had public APIs. As I started researching.... </p>
+                <a href="chingupart2.html">Read More</a>
+            </div>
+
+     
+
+
+            <div class="box">
+
+                <img src="/img/blog/florian-olivo-4hbJ-eymZ1o-unsplash.jpg" alt="Coding">
                 <h2>Chingu Experience (6 Weeks Journey) - Part 1</h2><br>
 
-                    <p>The first few days were overwhelming because it’s where exactly do you start? They do have handbooks for
-                        us to read but even reading it was a little overwhelming only because it was my first team project ever.... </p>
-                    <a href="chingu.html">Read More</a>
+                <p>The first few days were overwhelming because it’s where exactly do you start? They do have handbooks
+                    for
+                    us to read but even reading it was a little overwhelming only because it was my first team project
+                    ever.... </p>
+                <a href="chingu.html">Read More</a>
             </div>
 
             <div class="box">
@@ -112,9 +137,9 @@
                 <img src="/img/blog/anete-lusina-2JknzBYDu6k-unsplash.jpg" alt="Planner">
                 <h2>Finding the Right Balance</h2><br>
 
-                    <p> I had so much time...I pretty much did at least 6/7 hours a day of studying, practicing and
-                        reading code and weekends I would go to work...</p>
-                    <a href="balance.html">Read More</a>
+                <p> I had so much time...I pretty much did at least 6/7 hours a day of studying, practicing and
+                    reading code and weekends I would go to work...</p>
+                <a href="balance.html">Read More</a>
             </div>
 
             <div class="box">
