--- a/services.html
+++ b/services.html
@@ -104,7 +104,8 @@
                 <p>Whether it's a website for your small business, an e-commerce website or simply
                     something unique we’ve
                     got you covered. Providing you with front-end and back-end solutions with modern-day web development
-                    features these include up-to-data guidelines and search friendliness for search accessibility. We build
+                    features these include up-to-data guidelines and search friendliness for search accessibility. We
+                    build
                     responsive websites that will allow your audience to view your websites regardless of what devices
                     they
                     use. We work tirelessly in providing you with a stunning website that exceeds all expectations. We
@@ -123,8 +124,9 @@
                 <br>
 
                 <p style="text-align: center;">
-                        Get in touch:<br>
-                        Through our <a href="./contact.html">contact page</a> or by <a href="mailto:info@estherboateng.co.uk">email</a> 
+                    Get in touch:<br>
+                    Through our <a href="./contact.html">contact page</a> or by <a
+                        href="mailto:info@estherboateng.co.uk">email</a>
 
                 </p>
 
@@ -132,9 +134,34 @@
 
 
             </section>
-
         </div>
 
+
+        <!--<section class="testimonals">-->
+
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="d-block w-20" src="img/alexandru-acea-XEB8y0nRRP4-unsplash.jpg" alt="First slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-20" src="img/alexandru-acea-XEB8y0nRRP4-unsplash.jpg" alt="Second slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-20" src="img/alexandru-acea-XEB8y0nRRP4-unsplash.jpg" alt="Third slide">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+
+        <!--</section>-->
 
     </div>
     <!-- end main-container -->
